--- a/characters/simpsons.yml
+++ b/characters/simpsons.yml
@@ -1,17 +1,17 @@
 ---
 characters:
 - short_name: homer
-  name: Homer Jay Simpson
+  name: Homer Simpson
 - short_name: bart
   name: Bart Simpson
 - short_name: marge
-  name: Marjorie Jacqueline Simpson
+  name: Marge Simpson
 - short_name: lisa
   name: Lisa Simpson
 - short_name: maggie
   name: Margaret Evelyn Simpson
-- short_name: grandpa_simpson
-  full_name: Abraham Jebediah Simpson
+- short_name: grandpa
+  full_name: Abraham Simpson
 - short_name: grandma_simpson
   full_name: Mona Simpson
 - short_name: santas_little_helper
