season 12 has a lot of bad episodes

--- a/episodes/season_12.yml
+++ b/episodes/season_12.yml
@@ -95,7 +95,7 @@ episodes:
     prison.  But when the ex-con gets a job painting a mural at the elementary school,
     he clashes with Skinner.
   simpsonsworld_id: 302844995961
-  good: maybe
+  good: false
   characters:
     - marge
     - skinner
@@ -116,7 +116,7 @@ episodes:
   description: When the Simpsons construct a tennis court in the backyard, Bart pairs
     up with Marge and becomes a tennis whiz... much to Homer's disappointment.
   simpsonsworld_id: 300916291603
-  good: maybe
+  good: false
   characters:
     - marge
     - homer
@@ -138,16 +138,18 @@ episodes:
   description: After casting Bart and his friends as singers in an all-boy band, a
     crazed record producer launches an attack on the offices of MAD magazine.
   simpsonsworld_id: 310437443723
-  good: maybe
+  good: true
   characters:
+    - bart
 - title: Hungry Hungry Homer
   season: 12
   episode: 15
   description: Homer goes on a hunger strike after learning that the owner of the
     Springfield Isotopes plans on moving the team to Albuquerque.
   simpsonsworld_id: 307850819931
-  good: maybe
+  good: true
   characters:
+    - homer
 - title: Bye Bye Nerdy
   season: 12
   episode: 16
@@ -185,8 +187,9 @@ episodes:
     closed amusement park into a new Christian amusement park, 'Praiseland.'  The
     park flops until visitors begin having 'visions.'
   simpsonsworld_id: 302848579632
-  good: maybe
+  good: true
   characters:
+    - flanders
 - title: Children of a Lesser Clod
   season: 12
   episode: 20
@@ -194,14 +197,15 @@ episodes:
     successful stint as a babysitter prompts Homer to open a full-time daycare service,
     leaving Bart and Lisa feeling neglected.
   simpsonsworld_id: 301652547508
-  good: maybe
+  good: false
   characters:
+    - homer
 - title: Simpsons Tall Tales
   season: 12
   episode: 21
   description: The Simpsons jump a train, and meet a hobo, who tells them twisted
     versions of three classic tales, all of which feature Simpsons characters.
   simpsonsworld_id: 301685315594
-  good: maybe
+  good: false
   characters:
     - vignettes
