--- a/episodes/season_16.yml
+++ b/episodes/season_16.yml
@@ -160,8 +160,9 @@ episodes:
   description: Homer is declared a prophet after he convinces everyone in town that
     the end of the world is at hand.
   simpsonsworld_id: 264217155650
-  good: maybe
+  good: false
   characters:
+    - homer
 - title: Home Away From Homer
   season: 16
   episode: 20
