--- a/episodes/season_23.yml
+++ b/episodes/season_23.yml
@@ -6,8 +6,9 @@ episodes:
   description: Homer attempts to help a former CIA agent plagued by violent flashbacks
     from his past.
   simpsonsworld_id: 273517123847
-  good: maybe
+  good: false
   characters:
+    - homer
 - title: Bart Stops to Smell the Roosevelts
   season: 23
   episode: 2
@@ -15,8 +16,10 @@ episodes:
     taking charge of the boy's education. When Chalmers loses his job, Bart and his
     classmates attempt to get him reinstated.
   simpsonsworld_id: 273518659843
-  good: maybe
+  good: true
   characters:
+    - bart
+    - chalmers
 - title: Treehouse of Horror XXII
   season: 23
   episode: 3
@@ -34,8 +37,10 @@ episodes:
     robots that rival Lisa's entry in a science fair project; Homer ends up working
     for his new assistant.
   simpsonsworld_id: 273736771817
-  good: maybe
+  good: false
   characters:
+    - homer
+    - bart
 - title: The Food Wife
   season: 23
   episode: 5
@@ -43,8 +48,9 @@ episodes:
     become successful food bloggers; Homer finds himself trapped in a meth lab after
     Marge deliberately gives him the wrong address for a restaurant.
   simpsonsworld_id: 233194563539
-  good: maybe
+  good: false
   characters:
+    - marge
 - title: The Book Job
   season: 23
   episode: 6
@@ -52,24 +58,28 @@ episodes:
     forms a literary gang in hopes of writing a bestselling "tween" novel and raking
     in millions.
   simpsonsworld_id: 264559171655
-  good: maybe
+  good: false
   characters:
+    - lisa
+    - homer
 - title: The Man in the Blue Flannel Pants
   season: 23
   episode: 7
   description: Burns appoints Homer the nuclear power plant's new account man, damning
     him to a 'Mad Men'-like existence; Lisa becomes Bart's mentor.
   simpsonsworld_id: 1071533123906
-  good: maybe
+  good: false
   characters:
+    - homer
 - title: The Ten-Per-Cent Solution
   season: 23
   episode: 8
   description: After being fired from his popular kids' show, Krusty stages a comeback
     with help from an agent who's also an old flame.
   simpsonsworld_id: 230516291714
-  good: maybe
+  good: false
   characters:
+    - krusty
 - title: Holidays Of Future Passed
   season: 23
   episode: 9
@@ -77,8 +87,10 @@ episodes:
     children on Christmas; an unwed Maggie gives birth while heading home for the
     holidays.
   simpsonsworld_id: 230516803889
-  good: maybe
+  good: false
   characters:
+    - bart
+    - lisa
 - title: Politically Inept, With Homer Simpson
   season: 23
   episode: 10
