--- a/characters/springfield.yml
+++ b/characters/springfield.yml
@@ -14,3 +14,7 @@ characters:
   name: Artie Ziff
 - short_name: wolfcastle
   name: Rainier Wolfcastle
+- short_name: barney
+  name: Barney Gumble
+- short_name: apu
+  name: Apu Nahasapeemapetilon
