--- a/episodes/season_04.yml
+++ b/episodes/season_04.yml
@@ -181,7 +181,7 @@ episodes:
   characters:
     - lisa
     - bart
-    - grandpa
+    - grandpa_simpson
 - title: Whacking Day
   season: 4
   episode: 20
