oh man, accidentally marked all of season 5 as bad. change to maybe

--- a/episodes/season_15.yml
+++ b/episodes/season_15.yml
@@ -179,8 +179,9 @@ episodes:
   description: Bart and Lisa pursue Homer and Marge after they sneak away on a second
     honeymoon; Grampa catches the eye of a dashing Cuban man.
   simpsonsworld_id: 227415619717
-  good: maybe
+  good: false
   characters:
+    - simpsons
 - title: Simple Simpson
   season: 15
   episode: 19
