--- a/episodes/season_05.yml
+++ b/episodes/season_05.yml
@@ -6,14 +6,14 @@ episodes:
   description: Homer recounts his phenomenal rise to superstardom as a member of the
     barbershop quartet, The Be Sharps.
   simpsonsworld_id: 305674307809
-  good: false
+  good: maybe
   characters:
 - title: Cape Feare
   season: 5
   episode: 2
   description: Sideshow Bob terrorizes Bart after he is paroled from prison.
   simpsonsworld_id: 305674819788
-  good: false
+  good: maybe
   characters:
 - title: Homer Goes to College
   season: 5
@@ -21,14 +21,14 @@ episodes:
   description: Homer enrolls in a nuclear physics class at Springfield University
     and convinces three nerdy classmates to help him pull off a prank.
   simpsonsworld_id: 280399427649
-  good: false
+  good: maybe
   characters:
 - title: Rosebud
   season: 5
   episode: 4
   description: The Simpsons find Mr. Burns' long-lost childhood teddy bear.
   simpsonsworld_id: 279714371653
-  good: false
+  good: maybe
   characters:
 - title: Treehouse of Horror IV
   season: 5
@@ -36,7 +36,7 @@ episodes:
   description: In a ghoulish gallery, Bart hosts three bloodcurdling tales of Halloween
     horror.
   simpsonsworld_id: 275206211805
-  good: false
+  good: maybe
   characters:
     - treehouse_of_horror
 - title: Marge on the Lam
@@ -45,7 +45,7 @@ episodes:
   description: Marge joins divorcee Ruth Powers for a wild night on the town, only
     to discover that her friend is driving a stolen vehicle.
   simpsonsworld_id: 294777411510
-  good: false
+  good: maybe
   characters:
 - title: Bart's Inner Child
   season: 5
@@ -53,7 +53,7 @@ episodes:
   description: The host of a self-help workshop convinces the people of Springfield
     they should emulate Bart's uninhibited personality.
   simpsonsworld_id: 275202627817
-  good: false
+  good: maybe
   characters:
 - title: Boy-Scoutz 'N the Hood
   season: 5
@@ -61,7 +61,7 @@ episodes:
   description: Bart inadvertently joins the Junior Campers, and during a rafting trip,
     he becomes lost at sea with Homer and Ned Flanders.
   simpsonsworld_id: 288056387698
-  good: false
+  good: maybe
   characters:
 - title: The Last Temptation of Homer
   season: 5
@@ -69,7 +69,7 @@ episodes:
   description: Homer is attracted to a sexy co-worker with a personality identical
     to his own.
   simpsonsworld_id: 275201091952
-  good: false
+  good: maybe
   characters:
 - title: "$pringfield (Or, How I Learned to Stop Worrying and Love Legalized Gambling)"
   season: 5
@@ -77,7 +77,7 @@ episodes:
   description: Marge becomes addicted to playing slot machines after the town of Springfield
     legalizes gambling.
   simpsonsworld_id: 305659459565
-  good: false
+  good: maybe
   characters:
 - title: Homer the Vigilante
   season: 5
@@ -85,7 +85,7 @@ episodes:
   description: Homer takes the law into his own hands after Springfield is victimized
     by a cat burglar.
   simpsonsworld_id: 305677891810
-  good: false
+  good: maybe
   characters:
 - title: Bart Gets Famous
   season: 5
@@ -93,7 +93,7 @@ episodes:
   description: Bart becomes an instant celebrity after he ad-libs a line during a
     sketch on the "Krusty the Klown Show."
   simpsonsworld_id: 302789187885
-  good: false
+  good: maybe
   characters:
 - title: Homer and Apu
   season: 5
@@ -101,14 +101,14 @@ episodes:
   description: Apu offers the Simpsons his services as valet after he is fired from
     the Kwik-E-Mart for selling rancid meat.
   simpsonsworld_id: 279716931614
-  good: false
+  good: maybe
   characters:
 - title: Lisa vs. Malibu Stacy
   season: 5
   episode: 14
   description: Lisa manufactures her own talking doll for little girls.
   simpsonsworld_id: 274260035625
-  good: false
+  good: maybe
   characters:
 - title: Deep Space Homer
   season: 5
@@ -116,28 +116,28 @@ episodes:
   description: NASA scientists train Homer to become the first average American in
     space, with near disastrous results.
   simpsonsworld_id: 275720259883
-  good: false
+  good: maybe
   characters:
 - title: Homer Loves Flanders
   season: 5
   episode: 16
   description: Flanders is horrified to discover he has become Homer's best friend.
   simpsonsworld_id: 310398019629
-  good: false
+  good: maybe
   characters:
 - title: Bart Gets an Elephant
   season: 5
   episode: 17
   description: Bart wins a full grown African elephant as part of a radio contest.
   simpsonsworld_id: 275726403611
-  good: false
+  good: maybe
   characters:
 - title: Burns' Heir
   season: 5
   episode: 18
   description: Mr. Burns chooses Bart as the heir to his vast fortune.
   simpsonsworld_id: 283747395787
-  good: false
+  good: maybe
   characters:
 - title: Sweet Seymour Skinner's Baadasssss Song
   season: 5
@@ -145,7 +145,7 @@ episodes:
   description: Bart suffers enormous guilt after Skinner is fired from his job as
     school principal.
   simpsonsworld_id: 274260035741
-  good: false
+  good: maybe
   characters:
 - title: The Boy Who Knew Too Much
   season: 5
@@ -154,7 +154,7 @@ episodes:
     he fears that identifying himself as a witness will mean expulsion for skipping
     class.
   simpsonsworld_id: 278796355962
-  good: false
+  good: maybe
   characters:
 - title: Lady Bouvier's Lover
   season: 5
@@ -162,7 +162,7 @@ episodes:
   description: Grampa and Mr. Burns vie for Mrs. Bouvier's hand in marriage.  Bart
     purchases a worthless Itchy and Scratchy animation cell.
   simpsonsworld_id: 305681987583
-  good: false
+  good: maybe
   characters:
 - title: Secrets of a Successful Marriage
   season: 5
@@ -170,5 +170,5 @@ episodes:
   description: Marge kicks Homer out of the house after she discovers that he revealed
     her personal secrets to an adult education class.
   simpsonsworld_id: 279720003973
-  good: false
+  good: maybe
   characters:
